k8s/deployment.debugger.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 80
  selector:
    app: dotnet-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
spec:
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
      - name: dotnet
        image: shirhattiregistry.azurecr.io/k8s-skaffold/dotnet-example
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /app/echofoo"]
