k8s/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: shirhattik8sgroup
  name: azure-load-balancer
spec:
  loadBalancerIP: 40.78.47.192
  type: LoadBalancer
  ports:
  - port: 5000
  selector:
    app: dotnet-app
