k8s/hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s.shirhatti.com
    http:
      paths:
      - backend:
          serviceName: dotnet-service
          servicePort: 5000
        path: /(.*)
